<resources>
    <string name="app_name">Gather</string>

    <!-- Strings related to Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Account name</string>
    <string name="pref_default_display_name">John Smith</string>

    <!-- Fitness settings -->
    <string name="pref_header_fitness_app">Fitbit</string>
    <string name="fitness_app_name">Fitness App Name</string>
    <string name="fitness_app_activity">Activity</string>

    <!-- Social Media settings -->
    <string name="pref_header_social_media_app">Facebook</string>
    <string name="social_media_app_name">Facebook</string>
    <string name="social_media_app_events">Events</string>
    <string name="social_media_app_likes">Likes</string>
    <string name="social_media_app_fitness">Fitness</string>
    <string name="social_media_app_posts">Posts</string>

    <!-- Facebook API -->
    <string name="facebook_app_id">875295565956699</string>
    <string name="fb_login_protocol_scheme">fb875295565956699</string>

    <!--Facebook Summary default strings-->
    <string name="fb_disabled_permissions">Unable to retrieve data as required permissions are disabled. Enable facebook permissions in Settings.</string>
    <string name="fb_logged_out">Unable to retrieve data as you are not logged in. Enable facebook in Settings.</string>
    <string name="loading">Loading...</string>

    <!-- GoogleFit App settings -->
    <string name="pref_header_food_app">Google Fit</string>
    <string name="gf_all">Google Fit</string>
    <string name="gf_heart_rate">Heart Rate</string>
    <string name="gf_basal_metabolic_rate">Basal Metabolic Rate</string>
    <string name="gf_distance">Distance</string>
    <string name="gf_speed">Speed</string>
    <string name="gf_fat">Fat Percentage</string>
    <string name="gf_calories">Calories Expended</string>
    <string name="gf_hydration">Hydration</string>
    <string name="gf_nutrition">Nutrition</string>
    <string name="gf_activity">Activity</string>
    <string name="gf_step_count">Step Count</string>
    <string name="gf_power">Power</string>

    <!-- Google Fit -->
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_rationale_access_fine_location">Please grant permission: Information (e.g. speed) may prove useful to a health practitioner.</string>
    <string name="permission_rationale_body_sensors">Please grant permission: Information (e.g. basal metabolic rate) may prove useful to a health practitioner.</string>

    <!-- Fitbit -->
    <string name="fitbit_not_authenticated">Unable to retrieve data as required permissions are disabled. Go to Settings to give permission.</string>

    <!-- Twitter-->
    <string name="com.twitter.sdk.android.CONSUMER_KEY">fclM24Zol77H9Js1h78gkuiDy</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">IWrC84e25OFeC87ULFaaZK7tq8DeQTF6QB1ZGwz38lQGfZDNIa</string>

    <!-- Social Media 2 settings -->
    <string name="pref_header_social_media_app_2">Twitter</string>
    <string name="social_media_app_2_name">Twitter</string>
    <string name="social_media_app_2_favourites">Favourites</string>
    <string name="social_media_app_2_statuses">Statuses</string>

    <!--Button Strings-->
    <string name="back_button">Back</string>
    <string name="toggle_off_general">General</string>
    <string name="toggle_on_social">Social</string>
</resources>
