<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/googlefit_24"
        android:key="google_fit_all"
        android:title="@string/gf_all" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="google_fit_all"
        android:key="calories"
        android:title="@string/gf_calories" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="google_fit_all"
        android:key="hydration"
        android:title="@string/gf_hydration" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="google_fit_all"
        android:key="nutrition"
        android:title="@string/gf_nutrition" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="google_fit_all"
        android:key="activity"
        android:title="@string/gf_activity" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="google_fit_all"
        android:key="step"
        android:title="@string/gf_step_count" />

</PreferenceScreen>
