<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <part4project.uoa.gather.AutoUploadSwitchPreference
        android:fragment="part4project.uoa.gather.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <SwitchPreference
        android:key="FacebookPreference"
        android:fragment="part4project.uoa.gather.SettingsActivity$FacebookPreferenceFragment"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/pref_header_social_media_app" />

    <SwitchPreference
        android:key="FitbitPreference"
        android:fragment="part4project.uoa.gather.SettingsActivity$FitnessPreferenceFragment"
        android:icon="@drawable/ic_directions_run_black_24dp"
        android:title="@string/pref_header_fitness_app" />

    <part4project.uoa.gather.SwitchPlusClickPreference
        android:key="GoogleFitPreference"
        android:fragment="part4project.uoa.gather.SettingsActivity$GoogleFitPreferenceFragment"
        android:icon="@drawable/ic_local_dining_black_24dp"
        android:title="@string/pref_header_food_app" />

    <SwitchPreference
        android:key="TwitterPreference"
        android:fragment="part4project.uoa.gather.SettingsActivity$TwitterPreferenceFragment"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/pref_header_social_media_app_2" />

</PreferenceScreen>
