<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="part4project.uoa.gather.SettingsActivity$FacebookPreferenceFragment"
        android:icon="@drawable/facebook_24"
        android:title="@string/pref_header_social_media_app" />

    <header
        android:fragment="part4project.uoa.gather.SettingsActivity$FitbitPreferenceFragment"
        android:icon="@drawable/fitbit_24"
        android:title="@string/pref_header_fitness_app"
        />

    <header
        android:fragment="part4project.uoa.gather.SettingsActivity$GoogleFitPreferenceFragment"
        android:icon="@drawable/googlefit_24"
        android:title="@string/pref_header_food_app" />

    <header
        android:fragment="part4project.uoa.gather.SettingsActivity$BlankTwitterPreferenceFragment"
        android:icon="@drawable/twitter_24"
        android:title="Twitter" />

</preference-headers>
